[package]
name = "backed-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = [ "json" ] }
rocket_cors = { version = "0.6.0" }
tokio-tungstenite = { version= "0.28.0", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.145"
reqwest = "0.12.24"
