[package]
name = "backend-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = [ "json" ] }
rocket_cors = { version = "0.6.0" }
tokio-tungstenite = { version= "0.28.0", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.145"
reqwest = "0.12.24"
opentelemetry_sdk =  {version = "0.31.0", features = ["logs"] }
opentelemetry-stdout = {version="0.31.0", features = ["logs"] }
opentelemetry-appender-tracing = "0.31.1"
tracing = {version = "0.1.44", features = ["std", "attributes"] }
tracing-subscriber = {version="0.3.22", features = ["env-filter", "registry", "std", "fmt"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = {version="0.31.0", features=["logs"] }
